--- a/project.html
+++ b/project.html
@@ -38,18 +38,18 @@
     <!-- Vendor CSS Files -->
     <link href="assetsss/" rel="stylesheet">
     <!-- <link href="assetsss/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="assetsss/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <!-- <link href="assetsss/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assetsss/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assetsss/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assetsss/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assetsss/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" /> -->
 
 
     <!-- Template Main CSS File -->
     <!-- <link href="assetsss/css/style.css" rel="stylesheet"> -->
-    <link href="assetsss/css/diary.css" rel="stylesheet">
-    <link rel="stylesheet" href="assetsss/css/styleProject.css">
+    <!-- <link href="assetsss/css/diary.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/styleProject.css">
 
 
 
@@ -59,7 +59,7 @@
 
 
 
-    <link rel="stylesheet" href="./assets/css/styleProject.css">
+    <link rel="stylesheet" href="css/styleProject.css">
     <!-- =======================================================
   * Template Name: Bethany - v4.7.0
   * Template URL: https://bootstrapmade.com/bethany-free-onepage-bootstrap-theme/
