--- a/Go to Project.html
+++ b/Go to Project.html
@@ -68,7 +68,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="groupDiary.html" class="nav-item nav-link active">Group Diary</a>
+                        <a href="GroupDiary.html" class="nav-item nav-link active">Group Diary</a>
                         <a href="StyleGuide.html" class="nav-item nav-link ">StyleGuide</a>
                         <a href="project.html" class="nav-item nav-link ">Project</a>
                         <!--  <a href="service.html" class="nav-item nav-link">Service</a> -->
