--- a/Technical.html
+++ b/Technical.html
@@ -69,7 +69,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link " >About</a>
-                        <a href="groupDiary.html" class="nav-item nav-link ">Group Diary</a>
+                        <a href="GroupDiary.html" class="nav-item nav-link ">Group Diary</a>
                         <a href="StyleGuide.html" class="nav-item nav-link ">StyleGuide</a>
                         <a href="project.html" class="nav-item nav-link">Project</a>
                         <a href="Technical.html" class="nav-item nav-link active">Technical</a>
