--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                     <div class="navbar-nav ml-auto">
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link active" >About</a>
-                        <a href="groupDiary.html" class="nav-item nav-link">Group Diary</a>
+                        <a href="GroupDiary.html" class="nav-item nav-link">Group Diary</a>
                         <a href="StyleGuide.html" class="nav-item nav-link ">StyleGuide</a>
                         
                         <a href="project.html" class="nav-item nav-link ">Project</a>
