--- a/project.html
+++ b/project.html
@@ -382,7 +382,7 @@
                             <div class="col-10">
                                 <div>
                                     <p style="color: black;text-align:left;margin-left:-2%;">1. Những chức năng của
-                                        trang bán hàng</p>
+                                        trang </p>
                                 </div>
                             </div>
                             <div class="col-2">
