upload file img

--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                                 <h2>Nguyễn Văn Tân</h2>
                                 <p>Id: 22130246</p>
                                 <div class="team-social">
-                                    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fbetterchoise.github.io%2FNguyenVanTan_22130246%2F%3Ffbclid%3DIwAR39koMq9rPZezIznt5rZW4rtGSkS8fNuXb7_9Uixeem9ilLmQZ3D_MfrQ8&h=AT3nsbfZWod23mIevPewIDXjfrGuqfDw4JSShLY95qM-AuCSEnvdtbm_QXXMusfDjCPuRhI_PgiDNViHci8dbpT458Z0NfjPMCaw3Tt9UK4oSV5BrJ-oHDEXJ3_37zZQuKchFA"><i class=></i>web</a>
+                                    <a href="https://betterchoise.github.io/NguyenVanTan_22130246/?fbclid=IwAR2JfoCslLKcmV6zNsxxGuk2ThuwexXgmMR8kMjoeOP54SJMXDBeAgG_Wio"><i class=></i>web</a>
                                     <a href="https://www.facebook.com/profile.php?id=100012158356649&mibextid=kFxxJD"><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fa-brands fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
@@ -216,7 +216,7 @@
                                 <h2>Nguyễn Trung Thành</h2>
                                 <p>Id: 22130256</p>
                                 <div class="team-social">
-                                    <a href="http://21130238.tk"><i class="">web</i></a>
+                                    <a href="https://thanh7124.github.io/trangcanhan/?fbclid=IwAR0PmTGfPM-o_0bIyPGFr60jHrnVnBYnXTWMVN1kOUposmccL40YOcg-VP8"><i class="">web</i></a>
                                     <a href="https://www.facebook.com/profile.php?id=100069107764935"><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fa-brands fa-youtube"></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
@@ -267,7 +267,7 @@
                                 <h2>Võ Đại Thành Tài</h2>
                                 <p>Id: 22130243</p>
                                 <div class="team-social">
-                                    <a href="https://lab1-7bdf2.web.app/"><i class=""></i>web</a>
+                                    <a href="https://issei17.github.io/About/"><i class=""></i>web</a>
                                     <a href="https://www.facebook.com/profile.php?id=100015775444272"><i class="fab fa-facebook-f"></i></a>
                                     <a href=""><i class="fa-brands fa-youtube"></i></i></a>
                                     <a href=""><i class="fab fa-instagram"></i></a>
