upload file img

--- a/project.html
+++ b/project.html
@@ -311,7 +311,7 @@
 
                             <button class="collapsible">Đăng nhập</button>
                             <div class="content">
-                                <img src="img/22130250_Lê Quốc Thái_Đăng nhập.jpeg nhập.jpeg" width="555px"
+                                <img src="img/22130250_Lê Quốc Thái_Đăng nhập.jpeg" width="555px"
                                     height="auto" alt="">
                                     <img src="img/22130250_Lê QUốc Thái_Đăng nhập_figma.png" width="555px" height="auto" alt="">
 
