--- a/project.html
+++ b/project.html
@@ -36,7 +36,7 @@
 <link src="../maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
 
     <!-- Vendor CSS Files -->
-    <link href="assetsss/" rel="stylesheet">
+    <!-- <link href="assetsss/" rel="stylesheet"> -->
     <!-- <link href="assetsss/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- <link href="assetsss/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assetsss/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -315,7 +315,7 @@
                                     height="auto" alt="">
                                     <img src="img/22130250_Lê QUốc Thái_Đăng nhập_figma.png" width="555px" height="auto" alt="">
 
-                                <a href="img/22130250_Lê Quốc Thái_Đăng nhập.jpeg nhập.jpeg" download="thiết kế giấy"
+                                <a href="img/22130250_Lê Quốc Thái_Đăng nhập.jpeg" download="thiết kế giấy"
                                     style="margin-left: 70px;" class="download-img-btn">download
                                 </a>
                                 <a href="img/22130250_Lê QUốc Thái_Đăng nhập_figma.png" download="thiết kế figma"
