--- a/Technical.html
+++ b/Technical.html
@@ -321,12 +321,14 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="footer-link">
-                                    <h2>Quick Links</h2>
-                                    <a href="">Terms of use</a>
-                                    <a href="">Privacy policy</a>
-                                    <a href="">Cookies</a>
-                                    <a href="">Help</a>
-                                    <a href="">FQAs</a>
+                                    <h2>Menu</h2>
+                                    <a href="./index.html">HOME</a>
+                                    <a href="./about.html">ABOUT</a>
+                                    <a href="./GroupDiary.html">GROUP DIARY</a>
+                                    <a href="#">STYLEGUIDE</a>
+                                    <a href="./project.html">PROJECT</a>
+                                    <a href="./Technical.html">TECHNICAL</a>
+                                    <a href="./website-hotel-managment/index.html">GO TO PROJECT</a>
                                 </div>
                             </div>
                         </div>
