--- a/project.html
+++ b/project.html
@@ -328,10 +328,11 @@
                             <button class="collapsible">Tab Rooms</button>
                             <div class="content">
                                 <img src="img/22130246_Nguyễn Văn Tân_rooms.jpg" width="555px" height="auto" alt="">
-
+                                <img src="img/22130246_Nguyễn Văn Tân_rooms-detail.jpg" width="555px" height="auto" alt="">
                                 <a href="img/22130246_Nguyễn Văn Tân_rooms.jpg" download="thiết kế giấy"
                                     style="margin-left: 70px;" class="download-img-btn">download </a>
-
+                                    <a href="img/22130246_Nguyễn Văn Tân_rooms-detail.jpg" download="thiết kế figma"
+                                    style="margin-left: 440px;">download</a>
                             </div>
 
                             <button class="collapsible">Tab about us</button>
