--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="https://st4.depositphotos.com/6305928/29635/v/1600/depositphotos_296353792-stock-illustration-teamwork-concept-with-man-and.jpg" alt="Image">
+                            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcloudoffice.com.vn%2Ftin-tuc-su-kien%2Fteamwork-la-gi-tai-sao-noi-teamwork-quan-trong-voi-cong-viec&psig=AOvVaw2WOGHyxSxeFV7ky4XdrmA4&ust=1707103215055000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMjc7ZjdkIQDFQAAAAAdAAAAABAh" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Your Business Our Effort</h1>
