--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="https://i.pinimg.com/736x/d9/34/be/d934be837dd471868bae73e2593f73fc.jpg" alt="Image">
+                            <img src="./img/bg3-home.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Fastest Way to Achieve Success</h1>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="https://img.freepik.com/premium-vector/problem-solution-business-solving-look-ideas-with-concept-teamwork-can-use-web-banner-background-flat-illustration_2175-2861.jpg?w=2000" alt="Image">
+                            <img src="./img/bg2-home.png" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Your Success Our Achievement</h1>
