--- a/Technical.html
+++ b/Technical.html
@@ -109,50 +109,49 @@
                             <h2>Firebase?</h2>
                         </div>
                         <p>
-                            Đây là 1 nền tảng để phát triển ứng dụng di động và trang web.
-                            Là một dịch vụ hệ thống backend được google cung cấp sẵn cho ứng dụng. Nó sẽ giúp người dùng phát triển, triển khai và mở rộng quy mô của ứng dụng di động nhanh hơn.
+                            Firebase là một nền tảng giúp người dùng xây dựng và phát triển các web, ứng dụng và trò chơi mà họ yêu thích. Firebase được hỗ trợ bởi Google và tin cậy bởi hàng triệu doanh nghiệp trên thế giới.
                         </p>
 
 
-                        <h2> 1. Firebase Hosting :</h2>
-                        <p> - Cung cấp nội dung kết nối an toàn </p>
-                        <p> - Lưu trữ nội dung tĩnh và động cùng với các dịch vụ nhỏ</p>
-                        <p> - Cung cấp nội dung nhanh chóng </p>
-                        <p> - Mô phỏng và chia sẽ các thay đổi của bạn trước khi phát trực tiếp</p>
-                        <p> - Triển khai các phiên bản bằng một lệnh</p>
+                        <h2> 1. Ưu điểm Firebase :</h2>
+                        <p> - Firebase giúp tiết kiệm thời gian và chi phí phát triển ứng dụng, bằng cách cung cấp các dịch vụ và công cụ sẵn có và dễ sử dụng. </p>
+                        <p> - Firebase cho phép các nhà phát triển tập trung vào việc xây dựng giao diện và tính năng của ứng dụng, mà không cần lo lắng về việc xử lý và lưu trữ dữ liệu ở phía máy chủ.</p>
+                        <p> - Firebase hỗ trợ nhiều nền tảng khác nhau, như web, Android, iOS, Unity, C++,... </p>
+                        <p> - Firebase có khả năng mở rộng tự động theo quy mô của ứng dụng, không cần phải quản lý cơ sở hạ tầng hay máy chủ.  </p>
+                        <p> - Firebase được hưởng lợi từ hệ thống máy chủ mạnh mẽ và an toàn của Google, đảm bảo hiệu suất cao và độ tin cậy cao cho các ứng dụng.</p>
 
 
 
                         <h2>2. Tiến hành tạo một trang web :</h2>
-                        <p> Bước 1: Tìm kiếm Google Firebase. </p>
+                        <p> B1: Tìm kiếm Google Firebase. </p>
                         <p><a href="https://firebase.google.com/">  Link: firebase.google.com</a></p>
                         <p><img src="img Technical/1.jpg"width ="800px"  /> </p>
                         
-                        <p>Bước 2: Đăng nhập vào firebase bằng tài khoản Google.</p>
+                        <p>B2: Đăng nhập vào firebase bằng tài khoản Google.</p>
                         <p><img src="img Technical/3.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 3: Sau khi đăng nhập chọn Get start.</p>
+                        <p>B3: Sau khi đăng nhập chọn Get start.</p>
                         <p><img src="img Technical/4.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 4: Tạo một dự án mới.</p>
+                        <p>B4: Tạo một dự án mới.</p>
                         <p><img src="img Technical/5.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 5: Đặt tên cho dự án.</p>
+                        <p>B5: Đặt tên cho dự án.</p>
                         <p><img src="img Technical/7.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 6: Chọn Carry on.</p>
+                        <p>B6: Chọn Carry on.</p>
                         <p><img src="img Technical/8.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 7: Chọn Default Account for Firebase.</p>
+                        <p>B7: Chọn Default Account for Firebase.</p>
                         <p><img src="img Technical/9.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 8: Chọn vào đây để tạo website cho dự án của bạn.</p>
+                        <p>B8: Chọn vào đây để tạo website cho dự án của bạn.</p>
                         <p><img src="img Technical/10.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 9: Đặt tên cho website của bạn và chọn đăng ký.</p>
+                        <p>B9: Đặt tên cho website của bạn và chọn đăng ký.</p>
                         <p><img src="img Technical/11.jpg"width ="800px"  /> </p>
 
-                        <p>Bước 10: Vậy là đã đăng ký thành công một web app trên firebase</p>
+                        <p>B10: Vậy là đã đăng ký thành công một web app trên firebase</p>
                         <p><img src="img Technical/12.jpg"width ="800px"  /> </p>
 
                         <h2> 3. Video hướng dẫn : </h2>
