--- a/Technical.html
+++ b/Technical.html
@@ -123,11 +123,11 @@
 
 
                         <h2>2. Tiến hành tạo một trang web :</h2>
-                        <p> B1: Tìm kiếm Google Firebase. </p>
+                        <p> B1: Tạo tài khoản Firebase </p>
                         <p><a href="https://firebase.google.com/">  Link: firebase.google.com</a></p>
                         <p><img src="img Technical/1.jpg"width ="800px"  /> </p>
                         
-                        <p>B2: Đăng nhập vào firebase bằng tài khoản Google.</p>
+                        <p>B2: đăng nhập vào bảng điều khiển Firebase.</p>
                         <p><img src="img Technical/3.jpg"width ="800px"  /> </p>
 
                         <p>B3: Sau khi đăng nhập chọn Get start.</p>
