--- a/Technical.html
+++ b/Technical.html
@@ -106,7 +106,7 @@
                     <!-- <div class="col-md-6"> -->
                         <div class="section-header">
                             <p>Tìm hiểu</p>
-                            <h2>Firebase?</h2>
+                            <h2>Firebase là gì?</h2>
                         </div>
                         <p>
                             Firebase là một nền tảng giúp người dùng xây dựng và phát triển các web, ứng dụng và trò chơi mà họ yêu thích. Firebase được hỗ trợ bởi Google và tin cậy bởi hàng triệu doanh nghiệp trên thế giới.
